# workshops_c

./: CMakeLists.txt
workshop1/exercise1/: exercise1-1-1.c  exercise1-1-2.c  exercise1-1-3.c  exercise1-1-4.c  exercise1-1-5.c
workshop1/exercise2/: clocktest.c
workshop1/exercise3/: bubblesort_vs_quicksort.c
workshop2/: exercise2-1-1.c  exercise2-1-2.c
